--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 <body>
 
 <h1>Titre de mon blog</h1>
+ <h2>Titre de mon blog</h2>
+ <h3>Titre de mon blog</h3>
+ <h4>Titre de mon blog</h4>
+ <h5>Titre de mon blog</h5>
+ <h6>Titre de mon blog</h6>
 <p>Cei est mon oeuvre !</p>
 
 </body>
